iptables
-A INPUT -s 98.4.99.229 -j DROP
-A INPUT -s 97.113.176.6 -j DROP
-A INPUT -s 95.216.66.13 -j DROP
-A INPUT -s 95.211.214.99 -j DROP
-A INPUT -s 95.163.193.124 -j DROP
-A INPUT -s 95.154.102.7 -j DROP
-A INPUT -s 94.75.194.28 -j DROP
-A INPUT -s 94.48.78.90 -j DROP
-A INPUT -s 94.177.161.19 -j DROP
-A INPUT -s 94.176.148.34 -j DROP
-A INPUT -s 92.222.51.18 -j DROP
-A INPUT -s 91.218.84.12 -j DROP
-A INPUT -s 91.205.184.194 -j DROP
-A INPUT -s 91.121.89.209 -j DROP
-A INPUT -s 91.121.59.63 -j DROP
-A INPUT -s 91.100.6.150 -j DROP
-A INPUT -s 90.92.203.39 -j DROP
-A INPUT -s 89.47.165.82 -j DROP
-A INPUT -s 89.3.216.16 -j DROP
-A INPUT -s 89.255.24.222 -j DROP
-A INPUT -s 89.22.204.89 -j DROP
-A INPUT -s 88.99.25.72 -j DROP
-A INPUT -s 88.136.184.35 -j DROP
-A INPUT -s 88.117.174.118 -j DROP
-A INPUT -s 86.167.9.42 -j DROP
-A INPUT -s 85.17.176.19 -j DROP
-A INPUT -s 84.194.248.100 -j DROP
-A INPUT -s 8.40.32.7 -j DROP
-A INPUT -s 83.212.102.96 -j DROP
-A INPUT -s 82.30.112.161 -j DROP
-A INPUT -s 81.129.62.100 -j DROP
-A INPUT -s 81.103.75.104 -j DROP
-A INPUT -s 81.102.92.32 -j DROP
-A INPUT -s 80.57.37.62 -j DROP
-A INPUT -s 80.119.207.180 -j DROP
-A INPUT -s 79.137.72.234 -j DROP
-A INPUT -s 79.136.70.121 -j DROP
-A INPUT -s 78.97.170.177 -j DROP
-A INPUT -s 78.198.212.132 -j DROP
-A INPUT -s 78.130.233.44 -j DROP
-A INPUT -s 77.30.207.40 -j DROP
-A INPUT -s 76.24.136.105 -j DROP
-A INPUT -s 76.102.110.62 -j DROP
-A INPUT -s 74.208.200.125 -j DROP
-A INPUT -s 73.29.140.98 -j DROP
-A INPUT -s 73.158.72.219 -j DROP
-A INPUT -s 71.143.150.171 -j DROP
-A INPUT -s 69.244.163.253 -j DROP
-A INPUT -s 68.183.118.151 -j DROP
-A INPUT -s 67.250.45.45 -j DROP
-A INPUT -s 67.180.189.176 -j DROP
-A INPUT -s 66.135.33.133 -j DROP
-A INPUT -s 62.75.242.67 -j DROP
-A INPUT -s 62.210.182.246 -j DROP
-A INPUT -s 62.210.101.222 -j DROP
-A INPUT -s 5.9.148.207 -j DROP
-A INPUT -s 5.9.141.70 -j DROP
-A INPUT -s 59.127.108.14 -j DROP
-A INPUT -s 5.9.117.16 -j DROP
-A INPUT -s 58.17.1.245 -j DROP
-A INPUT -s 58.17.1.244 -j DROP
-A INPUT -s 5.59.105.77 -j DROP
-A INPUT -s 54.39.29.112 -j DROP
-A INPUT -s 54.37.155.225 -j DROP
-A INPUT -s 54.254.156.220 -j DROP
-A INPUT -s 5.196.152.29 -j DROP
-A INPUT -s 5.189.170.168 -j DROP
-A INPUT -s 5.189.164.178 -j DROP
-A INPUT -s 51.77.194.37 -j DROP
-A INPUT -s 51.68.46.113 -j DROP
-A INPUT -s 5.135.89.197 -j DROP
-A INPUT -s 5.135.184.126 -j DROP
-A INPUT -s 51.255.83.44 -j DROP
-A INPUT -s 51.235.45.170 -j DROP
-A INPUT -s 51.15.175.44 -j DROP
-A INPUT -s 50.246.195.20 -j DROP
-A INPUT -s 47.96.141.222 -j DROP
-A INPUT -s 47.200.177.193 -j DROP
-A INPUT -s 46.208.118.29 -j DROP
-A INPUT -s 46.173.219.80 -j DROP
-A INPUT -s 46.146.34.238 -j DROP
-A INPUT -s 46.13.26.234 -j DROP
-A INPUT -s 46.105.56.208 -j DROP
-A INPUT -s 46.101.205.148 -j DROP
-A INPUT -s 45.76.191.217 -j DROP
-A INPUT -s 45.76.103.34 -j DROP
-A INPUT -s 45.56.155.69 -j DROP
-A INPUT -s 42.241.41.96 -j DROP
-A INPUT -s 37.59.60.182 -j DROP
-A INPUT -s 37.187.97.71 -j DROP
-A INPUT -s 37.187.22.188 -j DROP
-A INPUT -s 37.187.132.45 -j DROP
-A INPUT -s 37.139.12.162 -j DROP
-A INPUT -s 35.236.27.86 -j DROP
-A INPUT -s 34.210.2.2 -j DROP
-A INPUT -s 31.42.11.89 -j DROP
-A INPUT -s 31.30.49.17 -j DROP
-A INPUT -s 31.208.165.4 -j DROP
-A INPUT -s 24.80.38.188 -j DROP
-A INPUT -s 24.4.110.68 -j DROP
-A INPUT -s 24.211.29.203 -j DROP
-A INPUT -s 221.125.235.4 -j DROP
-A INPUT -s 218.17.208.164 -j DROP
-A INPUT -s 217.182.92.146 -j DROP
-A INPUT -s 217.133.13.169 -j DROP
-A INPUT -s 217.117.28.37 -j DROP
-A INPUT -s 213.136.78.217 -j DROP
-A INPUT -s 213.113.7.175 -j DROP
-A INPUT -s 212.8.243.42 -j DROP
-A INPUT -s 207.180.239.53 -j DROP
-A INPUT -s 207.180.237.21 -j DROP
-A INPUT -s 207.180.204.128 -j DROP
-A INPUT -s 206.54.212.8 -j DROP
-A INPUT -s 206.225.82.54 -j DROP
-A INPUT -s 206.189.23.141 -j DROP
-A INPUT -s 206.189.220.118 -j DROP
-A INPUT -s 202.46.1.230 -j DROP
-A INPUT -s 198.245.62.200 -j DROP
-A INPUT -s 198.211.119.65 -j DROP
-A INPUT -s 198.148.103.197 -j DROP
-A INPUT -s 198.100.149.171 -j DROP
-A INPUT -s 194.99.106.146 -j DROP
-A INPUT -s 194.135.84.139 -j DROP
-A INPUT -s 193.148.71.16 -j DROP
-A INPUT -s 193.106.237.48 -j DROP
-A INPUT -s 192.99.145.155 -j DROP
-A INPUT -s 192.249.61.229 -j DROP
-A INPUT -s 191.6.48.171 -j DROP
-A INPUT -s 190.27.96.25 -j DROP
-A INPUT -s 190.2.147.107 -j DROP
-A INPUT -s 190.2.135.110 -j DROP
-A INPUT -s 190.140.36.103 -j DROP
-A INPUT -s 188.6.70.58 -j DROP
-A INPUT -s 188.27.66.81 -j DROP
-A INPUT -s 188.26.32.242 -j DROP
-A INPUT -s 188.240.208.154 -j DROP
-A INPUT -s 188.142.205.248 -j DROP
-A INPUT -s 188.138.86.80 -j DROP
-A INPUT -s 187.60.209.78 -j DROP
-A INPUT -s 185.26.120.10 -j DROP
-A INPUT -s 185.253.157.110 -j DROP
-A INPUT -s 185.244.193.44 -j DROP
-A INPUT -s 185.230.160.108 -j DROP
-A INPUT -s 185.220.70.155 -j DROP
-A INPUT -s 185.185.40.161 -j DROP
-A INPUT -s 185.165.243.22 -j DROP
-A INPUT -s 185.107.70.234 -j DROP
-A INPUT -s 181.143.23.42 -j DROP
-A INPUT -s 178.73.192.69 -j DROP
-A INPUT -s 178.62.68.136 -j DROP
-A INPUT -s 178.62.57.125 -j DROP
-A INPUT -s 178.162.130.160 -j DROP
-A INPUT -s 178.128.49.84 -j DROP
-A INPUT -s 178.128.246.3 -j DROP
-A INPUT -s 178.118.17.46 -j DROP
-A INPUT -s 176.9.46.130 -j DROP
-A INPUT -s 176.9.149.74 -j DROP
-A INPUT -s 176.9.120.174 -j DROP
-A INPUT -s 176.8.136.177 -j DROP
-A INPUT -s 176.31.185.176 -j DROP
-A INPUT -s 176.109.222.96 -j DROP
-A INPUT -s 175.111.114.10 -j DROP
-A INPUT -s 173.56.4.109 -j DROP
-A INPUT -s 173.212.205.197 -j DROP
-A INPUT -s 167.179.145.137 -j DROP
-A INPUT -s 167.114.144.70 -j DROP
-A INPUT -s 165.73.116.157 -j DROP
-A INPUT -s 165.227.239.204 -j DROP
-A INPUT -s 165.227.183.45 -j DROP
-A INPUT -s 164.132.96.43 -j DROP
-A INPUT -s 164.132.61.147 -j DROP
-A INPUT -s 163.172.95.100 -j DROP
-A INPUT -s 159.69.143.253 -j DROP
-A INPUT -s 159.203.117.161 -j DROP
-A INPUT -s 154.85.95.133 -j DROP
-A INPUT -s 154.85.88.26 -j DROP
-A INPUT -s 153.204.87.194 -j DROP
-A INPUT -s 151.228.248.83 -j DROP
-A INPUT -s 149.56.107.57 -j DROP
-A INPUT -s 149.28.212.53 -j DROP
-A INPUT -s 149.202.209.80 -j DROP
-A INPUT -s 146.212.133.15 -j DROP
-A INPUT -s 145.239.175.235 -j DROP
-A INPUT -s 145.239.175.234 -j DROP
-A INPUT -s 144.76.222.164 -j DROP
-A INPUT -s 144.76.156.35 -j DROP
-A INPUT -s 142.44.213.96 -j DROP
-A INPUT -s 139.180.202.15 -j DROP
-A INPUT -s 139.162.1.85 -j DROP
-A INPUT -s 138.68.105.35 -j DROP
-A INPUT -s 136.63.68.76 -j DROP
-A INPUT -s 136.243.23.102 -j DROP
-A INPUT -s 134.19.218.94 -j DROP
-A INPUT -s 13.251.251.70 -j DROP
-A INPUT -s 13.231.185.49 -j DROP
-A INPUT -s 130.89.166.145 -j DROP
-A INPUT -s 128.199.69.63 -j DROP
-A INPUT -s 125.46.201.47 -j DROP
-A INPUT -s 125.143.129.74 -j DROP
-A INPUT -s 123.14.67.230 -j DROP
-A INPUT -s 122.165.247.206 -j DROP
-A INPUT -s 121.211.247.85 -j DROP
-A INPUT -s 1.209.229.179 -j DROP
-A INPUT -s 120.72.21.49 -j DROP
-A INPUT -s 119.57.117.205 -j DROP
-A INPUT -s 119.163.122.32 -j DROP
-A INPUT -s 118.97.213.118 -j DROP
-A INPUT -s 118.31.249.236 -j DROP
-A INPUT -s 118.126.65.175 -j DROP
-A INPUT -s 113.87.12.144 -j DROP
-A INPUT -s 113.247.254.58 -j DROP
-A INPUT -s 111.230.96.113 -j DROP
-A INPUT -s 109.251.251.130 -j DROP
-A INPUT -s 109.238.10.52 -j DROP
-A INPUT -s 109.15.45.206 -j DROP
-A INPUT -s 108.208.26.166 -j DROP
-A INPUT -s 107.139.136.217 -j DROP
-A INPUT -s 104.35.100.24 -j DROP
-A INPUT -s 104.254.90.243 -j DROP
-A INPUT -s 104.248.27.159 -j DROP
-A INPUT -s 104.248.219.234 -j DROP
-A INPUT -s 104.244.78.112 -j DROP
-A INPUT -s 104.238.173.2 -j DROP
-A INPUT -s 104.168.148.138 -j DROP
-A INPUT -s 104.168.127.87 -j DROP
-A INPUT -s 103.253.147.27 -j DROP
